--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -1,7 +1,7 @@
 ---
 title: "WUP_04"
-author: "Put your name here!"
-date: "fall 2023"
+author: "Kacey Bates"
+date: "September17, 2024"
 output:
   html_document:
     df_print: paged
@@ -11,7 +11,7 @@ output:
 require(knitr)
 require(tidyverse)
 require(tigerstats)
-
+GSScsv <- read_csv("GSScsv.csv")
 ```
 
 # Introduction
