--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -65,6 +65,13 @@ Graduate has a Q1 of 10 compared to the Q3 of LT high school is 8.25 and the Q3 
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+model1 <- aov(WORDSUM~DEGREE,data=GSScsv)
+summary.aov(model1)
+```
+
+
+The p-value is 0.000236, meaning that there is a statistical difference within these results. Further testing is required to see the results.
 
 # Discussion and Conclusion
 
